--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&family=Yellowtail&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./public/favicon.ico" type="image/gif" sizes="16x16">
   </head>
 
   <body>
@@ -34,7 +35,7 @@
             <a href="#aboutus" class="nav-link">About us</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Third section</a>
+            <a href="#contactus" class="nav-link">Contact us</a>
           </li>
         </ul>
       </nav>
@@ -56,16 +57,6 @@
       <div class="container grid-3 center">
         <div>
           <i class="fas fa-heart"></i>
-          <h3 class="icon-title">Be healthy</h3>
-          <p class="icon-txt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-            omnis aliquid esse dolore, nobis consequatur sint, commodi facere
-            eius perferendis optio alias laborum fugit tempora excepturi id
-            ipsam! Deserunt, distinctio.
-          </p>
-        </div>
-        <div>
-          <i class="fas fa-heart"></i>
           <h3 class="icon-title">Be in shape</h3>
           <p class="icon-txt">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
@@ -77,6 +68,16 @@
         <div>
           <i class="fas fa-camera fa-3x"></i>
           <h3 class="icon-title">Get your strength</h3>
+          <p class="icon-txt">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+            omnis aliquid esse dolore, nobis consequatur sint, commodi facere
+            eius perferendis optio alias laborum fugit tempora excepturi id
+            ipsam! Deserunt, distinctio.
+          </p>
+        </div>
+        <div>
+          <i class="fas fa-heart"></i>
+          <h3 class="icon-title">Be in shape</h3>
           <p class="icon-txt">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
             omnis aliquid esse dolore, nobis consequatur sint, commodi facere
@@ -124,7 +125,25 @@
           <img src="assets/images/woman.jpg">
         </div>
       </div>
+
+
+    <section id="contactus" class="contact-wrapper">
+      <div class="wrapper">
+        <div class="contact-form">
+          <div class="input-fields">
+              <input type="text" class="input" placeholder="Name">
+              <input type="text" class="input" placeholder="Surname">
+              <input type="text" class="input" placeholder="Phone number">
+              <input type="text" class="input" placeholder="Email adress">
+          </div>
+          <div class="message">
+            <textarea placeholder="Message"></textarea>
+            <div class="btn">Send</div>
+          </div>
+        </div>
+      </div>
     </section>
+    
 
     <footer class="footer">
       <h3>Made with &#x2764; by Natalia</h3>
